# tars

./: .clang-format  CMakeLists.txt  README.md  book_crawler.py  crawler.py  log_utils.py  main.cpp  main.py  preprocessing.py  test_crawler.py  utils.py
cmake/: configuration.cmake  homebrew.cmake
src/: CMakeLists.txt
src/tars/: tars.cppm  tars_algebraictraits.cppm  tars_mp.cppm  tars_symbol.cppm  tars_symbolicfunctions.cppm  tars_typetraits.cppm
tests/: CMakeLists.txt  test_mp.cpp  test_symbol.cpp
